dereferencing instead of using DAOs, as much as possible